Fixed margin issue. Add products and troubleshoot product spacing

--- a/style.css
+++ b/style.css
@@ -51,11 +51,13 @@ header {
 	justify-content: center;
 	align-items: center;
 	background-color: black;
-	width: 23rem;
+	width: 28rem;
+	height: 11rem;
 	margin-top: 9rem;
+	padding-top: 1rem;
 }
 
-.new-products span, h2 {
+.new-products h1, h2 {
 	color: white;
 	font-family: Helvetica;
 	font-weight: bold;
@@ -63,7 +65,7 @@ header {
 	text-transform: uppercase;
 }
 
-.new-products span {
+.new-products h1 {
 	margin-top: 2rem;
 	font-size: 1rem;
 }
@@ -82,9 +84,41 @@ header {
 	align-items: center;
 }
 
-.menu span {
+.menu li {
+	display: inline-block;
 	color: white;
+	margin: 1.25rem 5.62rem 1.25rem 0;
+}
+
+/* Products */
+
+.products {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin: 3rem auto;
+}
+
+.item {
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
 	align-content: space-between;
-	margin: 0.75rem auto;
+	border: 4px solid black;
+	max-width: 16rem;
+	flex-wrap: wrap;
 }
 	
+.item img {
+	height: 9rem;
+	padding: 2rem 2rem;
+	align-items: center;
+}
+
+.item-name {
+	text-align: center;
+	width: 100%;
+	color: white;
+	background-color: black;
+	padding: 1rem 1rem;
+}
